ci: add github actions workflow
DX-8

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   "homepage": "https://github.com/seatentacle/design-tokens#readme",
   "devDependencies": {
     "@seatentacle/eslint-plugin": "1.2.0",
+    "@semantic-release/changelog": "5.0.1",
+    "@semantic-release/git": "9.0.0",
     "eslint": "7.0.0-alpha.3",
+    "semantic-release": "17.0.4",
     "typescript": "3.8.3"
   }
 }
