--- a/.github/workflows/semantic-release-action.yml
+++ b/.github/workflows/semantic-release-action.yml
@@ -16,6 +16,8 @@ jobs:
           node-versions: 12
       - name: Install dependencies
         run: npm ci
+      - name: Build
+        run: npm run build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
