--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,8 +33,11 @@
     "@seatentacle/eslint-plugin": "1.2.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
+    "@types/jest": "25.2.1",
     "eslint": "7.0.0-alpha.3",
+    "jest": "25.3.0",
     "semantic-release": "17.0.4",
+    "ts-jest": "25.3.1",
     "typescript": "3.8.3"
   }
 }
