ci: add test step for pre-deploy
DX-12

--- a/.github/workflows/pre-deployment-action.yml
+++ b/.github/workflows/pre-deployment-action.yml
@@ -1,6 +1,25 @@
 name: Pre-Deployment Action
 on: [pull_request]
 jobs:
+  checkout:
+    name: github/pr-head
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-versions: 12
+      - name: Cache npm dependencies
+        uses: actions/cache@v2
+        with:
+          key: npm-cache-${{ hashFiles('package-lock.json') }}
+          path: ~/.npm
+          restore-keys: |
+            npm-cache-
+      - name: Install dependencies
+        run: npm ci
   lint:
     name: ESLint
     runs-on: ubuntu-18.04
@@ -11,7 +30,35 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-versions: 12
+      - name: Cache npm dependencies
+        uses: actions/cache@v2
+        with:
+          key: npm-cache-${{ hashFiles('package-lock.json') }}
+          path: ~/.npm
+          restore-keys: |
+            npm-cache-
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-scripts --no-audit --no-progress --prefer-offline
       - name: Lint
         run: npm run lint
+  test:
+    name: Unit-tests
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-versions: 12
+      - name: Cache npm dependencies
+        uses: actions/cache@v2
+        with:
+          key: npm-cache-${{ hashFiles('package-lock.json') }}
+          path: ~/.npm
+          restore-keys: |
+            npm-cache-
+      - name: Install dependencies
+        run: npm ci --ignore-scripts --no-audit --no-progress --prefer-offline
+      - name: Test
+        run: npm run test
