--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.0",
     "@types/jest": "25.2.1",
+    "@types/styled-components": "5.1.3",
     "eslint": "7.0.0-alpha.3",
     "jest": "25.3.0",
     "lint-staged": "10.4.0",
     "semantic-release": "17.0.4",
+    "styled-components": "5.2.0",
     "ts-jest": "25.3.1",
     "typescript": "3.8.3",
     "yorkie": "2.0.0"
